# oc-labs

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: oc_calibrate.py  oc_centers_tests.py  oc_endtoend.py  oc_frg.py  oc_geo.py  oc_k0.py  oc_rg.py
configs/: default.yaml
notebooks/: 01_end_to_end.ipynb
src/oclab/: __init__.py  config.py  pipeline.py
src/oclab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/oclab/compute/: __init__.py  backend.py
src/oclab/frg/: __init__.py  bf_models.py  flows.py  projectors.py
src/oclab/io/: __init__.py  datasets.py  paths.py
src/oclab/math/: __init__.py  integration.py  linalg.py  sampling.py
src/oclab/oc/: __init__.py  calibration.py  centers.py  geometry.py  normalization.py  slope.py  stiffness.py  units.py
src/oclab/sm/: __init__.py  beta.py  rgrun.py  thresholds.py
src/oclab/viz/: __init__.py  plotting.py
